# Vendek

./: Cargo.toml  README.md  build-web.sh  index.html
src/: app.rs  camera.rs  gpu.rs  input.rs  lib.rs  main.rs  serve.rs  world.rs
src/shaders/: display.wgsl  honeycomb.wgsl
web/: bootstrap.js
