[package]
name = "vendek"
version = "0.1.0"
edition = "2021"
description = "Volumetric renderer for Schild's Ladder far-side environments"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vendek"
path = "src/main.rs"

[dependencies]
wgpu = { version = "23", features = ["webgpu"] }
winit = { version = "0.30", features = ["rwh_06"] }
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.16", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
log = "0.4"
env_logger = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "console",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "PointerEvent",
] }
console_error_panic_hook = "0.1"
console_log = "1"

[profile.release]
lto = true
opt-level = 3

[profile.release-wasm]
inherits = "release"
opt-level = "s"
